--- a/css/main.scss
+++ b/css/main.scss
@@ -151,13 +151,28 @@ section {
     }
 }
 
-.portolio {
+.portfolio {
     background: #F7F7F7;
 }
 
 .portfolio-container a img {
     border-radius: 1em;
     margin-bottom: 2em;
+}
+
+.contact-me {
+    color: black;
+    font-weight: bold;
+    font-size: 1.3em;
+    margin-bottom: 5em;
+    }
+
+span a{
+    color: #FF64CB
+}
+
+.footer {
+    margin-left: -90%;
 }
 
 @media only screen and (min-width: 800px) {
@@ -179,7 +194,7 @@ section {
     .right {
         margin-left: 2em;
         margin-top: 1em;
-        // border-radius: 1em;
+        border-radius: 1em;
     }
 
     .skills {
@@ -276,7 +291,9 @@ section {
 
     .portfolio  img {
         float: right;
-        max-width: 500px
+        max-width: 500px;
+        border: 1px solid black;
+
     }
 }
 
@@ -295,5 +312,28 @@ section {
     .hero .content {
         padding: 6em 8em 6em 20em;
     }
+
+    .footer {
+        margin-left: -50%;
+        // width: 100%
+    }
+
+    
 }
 
+//Animations
+
+.circle {
+    animation: circleAnim 1s infinite alternate-reverse;
+}
+
+@keyframes circleAnim {
+    from {
+        transform: translate(178px, 662px);
+        z-index:5;
+    }
+    to {
+        transform: translate(178px, 694px);
+        z-index:5;
+    }
+}
