--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 body {
     height: 100vh;
