--- a/css/main.css
+++ b/css/main.css
@@ -1,430 +1,443 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 .glide {
-  position: relative;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+	position: relative;
+	width: 100%;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .glide * {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+	-webkit-box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 .glide__track {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .glide__slides {
-  position: relative;
-  width: 100%;
-  list-style: none;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -ms-touch-action: pan-Y;
-      touch-action: pan-Y;
-  overflow: hidden;
-  padding: 0;
-  white-space: nowrap;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  will-change: transform;
+	position: relative;
+	width: 100%;
+	list-style: none;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-ms-touch-action: pan-Y;
+	touch-action: pan-Y;
+	overflow: hidden;
+	padding: 0;
+	white-space: nowrap;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: nowrap;
+	flex-wrap: nowrap;
+	will-change: transform;
 }
 
 .glide__slides--dragging {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .glide__slide {
-  width: 100%;
-  height: 100%;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  white-space: normal;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+	width: 100%;
+	height: 100%;
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	white-space: normal;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .glide__slide a {
-  -webkit-user-select: none;
-          user-select: none;
-  -webkit-user-drag: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
+	-webkit-user-drag: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 }
 
 .glide__arrows {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .glide__bullets {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .glide--rtl {
-  direction: rtl;
+	direction: rtl;
 }
 
 body {
-  height: 100vh;
-  margin: 0;
-  font-family: 'Poppins', arial;
+	height: 100vh;
+	margin: 0;
+	font-family: 'Poppins', arial;
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 img {
-  width: 100%;
+	width: 100%;
 }
 
 .nav-container {
-  background-color: #6700EE;
+	background-color: #6700ee;
 }
 
 .nav-container a {
-  color: white;
+	color: white;
+}
+
+.nav-container a:hover {
+	color: #ffcb05;
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 2em;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	padding: 2em;
 }
 
 header .logo {
-  color: #00F7C7;
-  font-weight: bold;
+	color: #00f7c7;
+	font-weight: bold;
 }
 
 header ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
 }
 
 header a {
-  display: block;
-  padding: 0 1rem;
+	display: block;
+	padding: 0 1rem;
 }
 
-.social-header, .hero-design {
-  display: none;
+.social-header,
+.hero-design {
+	display: none;
 }
 
 .hero {
-  background-color: #6E08F4;
-  color: white;
-  display: -ms-grid;
-  display: grid;
-  text-align: center;
-  padding: 4em;
+	background-color: #6e08f4;
+	color: white;
+	display: -ms-grid;
+	display: grid;
+	text-align: center;
+	padding: 4em;
 }
 
 .meet {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-  width: 200px;
-  font-weight: bold;
-  color: #FF64CB;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	margin: 0 auto;
+	width: 200px;
+	font-weight: bold;
+	color: #ff64cb;
 }
 
 .meet .fa-hand-point-down {
-  margin-top: 1.2em;
-  margin-right: .5em;
-  color: yellow;
+	margin-top: 1.2em;
+	margin-right: 0.5em;
+	color: yellow;
 }
 
 .scroll {
-  width: 30px;
-  margin-top: 2em;
+	width: 30px;
+	margin-top: 2em;
 }
 
 section {
-  padding: 4em 2em;
-  text-align: center;
+	padding: 4em 2em;
+	text-align: center;
 }
 
 .featured {
-  position: relative;
+	position: relative;
 }
 
 .featured::before {
-  content: '';
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background: #E5D5FA;
-  top: 0;
-  left: 0;
-  z-index: -1;
+	content: '';
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	background: #e5d5fa;
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 .subtitle {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #6E00FF;
-  letter-spacing: .2rem;
-  font-size: .85em;
+	text-transform: uppercase;
+	font-weight: bold;
+	color: #6e00ff;
+	letter-spacing: 0.2rem;
+	font-size: 0.85em;
 }
 
 .featured-title {
-  color: black;
-  font-weight: bold;
-  font-size: 1.3em;
-  margin-top: -.4em;
-  display: block;
+	color: black;
+	font-weight: bold;
+	font-size: 1.3em;
+	margin-top: -0.4em;
+	display: block;
 }
 
 .featured-desc {
-  color: #252525;
-  margin-bottom: 3em;
-  font-size: .9em;
-  line-height: 1.8em;
-  font-weight: 500;
+	color: #252525;
+	margin-bottom: 3em;
+	font-size: 0.9em;
+	line-height: 1.8em;
+	font-weight: 500;
+}
+
+.box {
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .skills {
-  background: #FF64CB;
-  padding: 4em 0em;
-  text-align: center;
+	background: #ff64cb;
+	padding: 4em 0em;
+	text-align: center;
 }
 
-.glide__arrow--left, .glide__arrow--right {
-  color: black;
-  font-weight: bold;
+.glide__arrow--left,
+.glide__arrow--right {
+	color: black;
+	font-weight: bold;
 }
 
 .skills-container ul li {
-  background: white;
-  padding: 2em;
-  border-radius: 1em;
-  margin-bottom: 1em;
+	background: white;
+	padding: 2em;
+	border-radius: 1em;
+	margin-bottom: 1em;
 }
 
 .skills-container ul li .icon-container {
-  height: 100px;
-  display: -ms-grid;
-  display: grid;
-  place-content: center;
+	height: 100px;
+	display: -ms-grid;
+	display: grid;
+	place-content: center;
 }
 
 .skills-container ul li .skill-title {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .skills-container ul li .featured-desc {
-  margin-bottom: 2em;
+	margin-bottom: 2em;
 }
 
 .portfolio {
-  background: #F7F7F7;
+	background: #f7f7f7;
 }
 
 .portfolio-container a img {
-  border-radius: 1em;
-  margin-bottom: 2em;
+	border-radius: 1em;
+	margin-bottom: 2em;
 }
 
 .contact-me {
-  color: black;
-  font-weight: bold;
-  font-size: 1.3em;
-  margin-bottom: 5em;
+	color: black;
+	font-weight: bold;
+	font-size: 1.3em;
+	margin-bottom: 5em;
 }
 
 span a {
-  color: #FF64CB;
+	color: #ff64cb;
 }
 
 .footer {
-  margin-left: -90%;
+	margin-left: -90%;
 }
 
 @media only screen and (min-width: 800px) {
-  .featured, .portfolio {
-    text-align: left;
-  }
-  .featured, .portfolio-container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 40% auto;
-        grid-template-columns: 40% auto;
-  }
-  .left, .portfolio-left {
-    display: -ms-grid;
-    display: grid;
-    place-content: center;
-  }
-  .right {
-    margin-left: 2em;
-    margin-top: 1em;
-    border-radius: 1em;
-    z-index: 300;
-  }
-  .skills {
-    margin-top: -5em;
-    margin-bottom: -7em;
-    padding-top: 7em;
-  }
-  .portfolio {
-    padding-top: 8em;
-  }
-  .portfolio-container img {
-    margin-left: 2rem;
-  }
+	.featured,
+	.portfolio {
+		text-align: left;
+	}
+	.featured,
+	.portfolio-container {
+		display: -ms-grid;
+		display: grid;
+		-ms-grid-columns: 40% auto;
+		grid-template-columns: 40% auto;
+	}
+	.left,
+	.portfolio-left {
+		display: -ms-grid;
+		display: grid;
+		place-content: center;
+	}
+	.right {
+		margin-left: 2em;
+		margin-top: 1em;
+		border-radius: 1em;
+		z-index: 300;
+	}
+	.skills {
+		margin-top: -5em;
+		margin-bottom: -7em;
+		padding-top: 7em;
+	}
+	.portfolio {
+		padding-top: 8em;
+	}
+	.portfolio-container img {
+		margin-left: 2rem;
+	}
 }
 
 @media only screen and (min-width: 1050px) {
-  .hero {
-    height: 90vh;
-  }
-  .nav-container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 66% auto;
-        grid-template-columns: 66% auto;
-    background: unset;
-  }
-  .nav-container header {
-    background: #6700EE;
-  }
-  .nav-container .fa-github {
-    color: black;
-  }
-  header {
-    padding: 2em 2em 2em 4em;
-  }
-  .social-header {
-    padding: 2em 4em 2em 2em;
-  }
-  section {
-    padding: 4em;
-  }
-  .social-header {
-    display: block;
-  }
-  .social-header ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .hero {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 66% auto;
-        grid-template-columns: 66% auto;
-    background: unset;
-    padding: 0;
-  }
-  .hero .content {
-    background: #6E00FF;
-    padding: 6em 8em 6em 4em;
-    text-align: left;
-  }
-  .hero .content h1 {
-    font-size: 3em;
-    line-height: 1.2em;
-  }
-  .meet {
-    margin: unset;
-  }
-  .hero-design {
-    display: unset;
-    margin-left: -50%;
-    margin-top: 15%;
-    width: 100%;
-  }
-  .portfolio img {
-    float: right;
-    max-width: 500px;
-    border: 1px solid black;
-  }
+	.hero {
+		height: 90vh;
+	}
+	.nav-container {
+		display: -ms-grid;
+		display: grid;
+		-ms-grid-columns: 66% auto;
+		grid-template-columns: 66% auto;
+		background: unset;
+	}
+	.nav-container header {
+		background: #6700ee;
+	}
+	.nav-container .fa-github {
+		color: black;
+	}
+	header {
+		padding: 2em 2em 2em 4em;
+	}
+	.social-header {
+		padding: 2em 4em 2em 2em;
+	}
+	section {
+		padding: 4em;
+	}
+	.social-header {
+		display: block;
+	}
+	.social-header ul {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+	}
+	.hero {
+		display: -ms-grid;
+		display: grid;
+		-ms-grid-columns: 66% auto;
+		grid-template-columns: 66% auto;
+		background: unset;
+		padding: 0;
+	}
+	.hero .content {
+		background: #6e00ff;
+		padding: 6em 8em 6em 4em;
+		text-align: left;
+	}
+	.hero .content h1 {
+		font-size: 3em;
+		line-height: 1.2em;
+	}
+	.meet {
+		margin: unset;
+	}
+	.hero-design {
+		display: unset;
+		margin-left: -50%;
+		margin-top: 15%;
+		width: 100%;
+	}
+	.portfolio img {
+		float: right;
+		max-width: 500px;
+		border: 1px solid black;
+	}
 }
 
 @media only screen and (min-width: 1250px) {
-  header {
-    padding: 2em 2em 2em 4em;
-  }
-  .social-header {
-    padding: 2em 10em 2em 0;
-  }
-  section {
-    padding: 10em 10em 4em 10em;
-  }
-  .hero .content {
-    padding: 6em 8em 6em 20em;
-  }
-  .footer {
-    margin-left: -50%;
-    width: 100%;
-  }
+	header {
+		padding: 2em 2em 2em 4em;
+	}
+	.social-header {
+		padding: 2em 10em 2em 0;
+	}
+	section {
+		padding: 10em 10em 4em 10em;
+	}
+	.hero .content {
+		padding: 6em 8em 6em 20em;
+	}
+	.footer {
+		margin-left: -50%;
+		width: 100%;
+	}
 }
 
 .circle {
-  animation: circleAnim 1s infinite alternate-reverse;
+	animation: circleAnim 1s infinite alternate-reverse;
 }
 
 @-webkit-keyframes circleAnim {
-  from {
-    -webkit-transform: translate(178px, 662px);
-            transform: translate(178px, 662px);
-    z-index: 5;
-  }
-  to {
-    -webkit-transform: translate(178px, 694px);
-            transform: translate(178px, 694px);
-    z-index: 5;
-  }
+	from {
+		-webkit-transform: translate(178px, 662px);
+		transform: translate(178px, 662px);
+		z-index: 5;
+	}
+	to {
+		-webkit-transform: translate(178px, 694px);
+		transform: translate(178px, 694px);
+		z-index: 5;
+	}
 }
 
 @keyframes circleAnim {
-  from {
-    -webkit-transform: translate(178px, 662px);
-            transform: translate(178px, 662px);
-    z-index: 5;
-  }
-  to {
-    -webkit-transform: translate(178px, 694px);
-            transform: translate(178px, 694px);
-    z-index: 5;
-  }
+	from {
+		-webkit-transform: translate(178px, 662px);
+		transform: translate(178px, 662px);
+		z-index: 5;
+	}
+	to {
+		-webkit-transform: translate(178px, 694px);
+		transform: translate(178px, 694px);
+		z-index: 5;
+	}
 }
 /*# sourceMappingURL=main.css.map */
