--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,73 @@ span a {
 	margin-left: -90%;
 }
 
+.hide-for-desktop {
+	display: none;
+}
+
+.hide-for-mobile {
+	display: block;
+}
+
+.toggle > span {
+		display: block;
+		width: 26px;
+		height: 2px;
+		background-color: white;
+		transition: all 300ms ease-in-out;
+		transform-origin: 3px 1px;
+		/* margin-bottom: 5px */
+}
+
+.toggle > span:not(:last-child) {
+	margin-bottom: 5px
+}
+
+.popup-modal {
+	height: 100px;
+	width: 650px;
+	background-color: #fff;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	padding: 45px;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 300ms ease-in-out;
+	z-index: 1011;
+}
+
+.is--visible {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+.header-menu {
+	position: absolute;  /* Use position absolute and transform to center menu*/
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: white;;
+        margin-top: 1.5rem;
+        padding: 1.625rem;
+        border-radius: 5px;
+}
+
+.popup-modal a {
+	color: black;
+	text-align: center;
+}
+@media only screen and (max-width: 500px) {
+	.hide-for-desktop {
+		display: block;
+	}
+
+	.hide-for-mobile {
+		display: none;
+	}
+}
+
 @media only screen and (min-width: 800px) {
 	.featured,
 	.portfolio {
