--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ img {
 
 .nav-container {
 	background-color: #6700ee;
+	
 }
 
 .nav-container a {
@@ -132,6 +133,7 @@ header {
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 	padding: 2em;
+	
 }
 
 header .logo {
@@ -318,19 +320,29 @@ span a {
 	margin-bottom: 5px
 }
 
+.openMenu > span:first-child {
+		transform: rotate(45deg)
+	}
+
+.openMenu > span:nth-child(2) {
+		opacity: 0;
+	}
+
+.openMenu > span:last-child {
+		transform: rotate(-45deg)
+	}
+
+
 .popup-modal {
-	height: 100px;
-	width: 650px;
-	background-color: #fff;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	padding: 45px;
+	background-color: #6700ee;
+    position: absolute;
+    right: 0;
+    top: 89px;
+    padding: 45px;
 	opacity: 0;
-	pointer-events: none;
-	transition: all 300ms ease-in-out;
-	z-index: 1011;
+    pointer-events: none;
+    transition: all 300ms ease-in-out;
+    z-index: 1011;
 }
 
 .is--visible {
@@ -338,19 +350,10 @@ span a {
     pointer-events: auto;
   }
 
-.header-menu {
-	position: absolute;  /* Use position absolute and transform to center menu*/
-        width: calc(100% - 3rem);
-        left: 50%;
-        transform: translateX(-50%);
-        background: white;;
-        margin-top: 1.5rem;
-        padding: 1.625rem;
-        border-radius: 5px;
-}
+
 
 .popup-modal a {
-	color: black;
+	color: #FFFFFF;
 	text-align: center;
 }
 @media only screen and (max-width: 500px) {
