--- a/css/main.css
+++ b/css/main.css
@@ -109,12 +109,10 @@ img {
 	max-height: 286px;
 	object-fit: cover;
 	object-position: top;
-	
 }
 
 .nav-container {
 	background-color: #6700ee;
-	
 }
 
 .nav-container a {
@@ -133,7 +131,6 @@ header {
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 	padding: 2em;
-	
 }
 
 header .logo {
@@ -292,6 +289,7 @@ section {
 
 span a {
 	color: #ff64cb;
+	cursor: pointer;
 }
 
 .footer {
@@ -307,55 +305,103 @@ span a {
 }
 
 .toggle > span {
-		display: block;
-		width: 26px;
-		height: 2px;
-		background-color: white;
-		transition: all 300ms ease-in-out;
-		transform-origin: 3px 1px;
-		/* margin-bottom: 5px */
+	display: block;
+	width: 26px;
+	height: 2px;
+	background-color: white;
+	transition: all 300ms ease-in-out;
+	transform-origin: 3px 1px;
+	/* margin-bottom: 5px */
 }
 
 .toggle > span:not(:last-child) {
-	margin-bottom: 5px
+	margin-bottom: 5px;
 }
 
 .openMenu > span:first-child {
-		transform: rotate(45deg)
-	}
+	transform: rotate(45deg);
+}
 
 .openMenu > span:nth-child(2) {
-		opacity: 0;
-	}
+	opacity: 0;
+}
 
 .openMenu > span:last-child {
-		transform: rotate(-45deg)
-	}
-
+	transform: rotate(-45deg);
+}
 
 .popup-modal {
 	background-color: #6700ee;
-    position: absolute;
-    right: 0;
-    top: 89px;
-    padding: 45px;
+	position: absolute;
+	right: 0;
+	top: 89px;
+	padding: 45px;
 	opacity: 0;
-    pointer-events: none;
-    transition: all 300ms ease-in-out;
-    z-index: 1011;
+	pointer-events: none;
+	transition: all 300ms ease-in-out;
+	z-index: 1011;
+}
+
+.hirePopup-modal {
+	position: relative;
+	background-color: #6700ee;
+	border-radius: 8px;
+	position: fixed;
+	right: 30%;
+	top: 30%;
+	left: 30%;
+	bottom: 30%;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 300ms ease-in-out;
+	z-index: 500;
+}
+
+.modalTitle {
+	padding-top: 35px;
+	text-align: center;
+}
+.emailField {
+	display: block;
+	border-radius: 4px;
+	padding: 7px;
+	margin: 0 auto;
+	width: 280px;
+}
+
+.messageField {
+	display: block;
+	border-radius: 4px;
+	padding: 7px;
+	margin: 5px auto;
+	width: 280px;
 }
 
 .is--visible {
-    opacity: 1;
-    pointer-events: auto;
-  }
-
-
+	opacity: 1;
+	pointer-events: auto;
+}
 
 .popup-modal a {
-	color: #FFFFFF;
+	color: #ffffff;
 	text-align: center;
 }
+
+#modalCloseBtn {
+	position: absolute;
+	top: 5px;
+	right: 10px;
+}
+
+.sendBtn {
+	display: block;
+	margin: 0 auto;
+}
+
+.errorBorder {
+	border: 2px solid red;
+}
+
 @media only screen and (max-width: 500px) {
 	.hide-for-desktop {
 		display: block;
@@ -363,6 +409,13 @@ span a {
 
 	.hide-for-mobile {
 		display: none;
+	}
+
+	.hirePopup-modal {
+		right: 0;
+		top: 30%;
+		left: 0%;
+		bottom: 30%;
 	}
 }
 
