--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 @import "../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss";
+// // Required Core Stylesheet
+// @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
+// // Optional Theme Stylesheet
+// @import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 
 body {
     height: 100vh;
